# marray

./: .gitignore  .mkdocs.yml  .readthedocs.yaml  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  iterator.hpp  marray.hpp  mkdocs.yml  utility.hpp
.circleci/: config.yml
doc/mkdocs/: mkdocs.yml  requirements.txt
docs/: api.md
docs/doxygen/: Doxyfile
include/: dpd_marray.hpp  dpd_marray_base.hpp  dpd_marray_view.hpp  dpd_varray.hpp  dpd_varray_base.hpp  dpd_varray_view.hpp  expression.hpp  indexed_dpd_varray.hpp  indexed_dpd_varray_base.hpp  indexed_dpd_varray_view.hpp  indexed_varray.hpp  indexed_varray_base.hpp  iterator.hpp  marray.hpp  marray_base.hpp  marray_slice.hpp  marray_view.hpp  memory.hpp  miterator.hpp  range.hpp  rotate.hpp  short_vector.hpp  utility.hpp  varray.hpp  varray_base.hpp  varray_view.hpp  vector.hpp  vector_avx.hpp  vector_avx512.hpp  vector_neon.hpp  vector_sse41.hpp  viterator.hpp
marray/: array_1d.hpp  array_2d.hpp  blas.h  expression.hpp  flame.hpp  index_iterator.hpp  marray.hpp  marray_base.hpp  marray_slice.hpp  marray_view.hpp  range.hpp  rotate.hpp  short_vector.hpp
marray/detail/: fortran.h  utility.hpp  vector.hpp  vector_avx.hpp  (+2 more)
test/: Makefile.am  Makefile.in  configure  configure.ac  dpd_marray.cxx  dpd_marray_view.cxx  dpd_varray.cxx  dpd_varray_view.cxx  expression.cxx  indexed_dpd_varray.cxx  marray.cxx  marray.hpp  marray_view.cxx  miterator.cxx  range.cxx  short_vector.cxx  test.cxx.footer  test.cxx.header  utility.cxx  varray.cxx  varray_view.cxx  viterator.cxx
(+10 files in other folders)
